--- a/frame/composer.json
+++ b/frame/composer.json
@@ -7,6 +7,7 @@
         "symfony/http-foundation": "^3.3",
         "monolog/monolog": "^1.22",
         "filp/whoops": "^2.1",
+        "doctrine/dbal": "^2.5",
         "cakephp/i18n": "^3.2"
     },
     "license": "MIT",
